--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "konva": "^9.2.0",
+    "react-konva": "^18.2.10"
   }
 }
